--- a/.github/workflows/aws-deploy.yaml
+++ b/.github/workflows/aws-deploy.yaml
@@ -24,6 +24,7 @@ jobs:
             touch terraform.tfvars
             echo aws_access_key = "$AWS_ACCESS_KEY" >> terraform.tfvars
             echo aws_secret_key = "$AWS_SECRET_KEY" >> terraform.tfvars
+            cat terraform.tfvars
         shell: bash
         env:
           AWS_ACCESS_KEY : ${{secrets.AWS_ACCESS_KEY}}
