--- a/.github/workflows/aws-deploy.yaml
+++ b/.github/workflows/aws-deploy.yaml
@@ -22,9 +22,8 @@ jobs:
         working-directory: ./terraform
         run: |
             touch terraform.tfvars
-            echo aws_access_key = "$AWS_ACCESS_KEY" >> terraform.tfvars
-            echo aws_secret_key = "$AWS_SECRET_KEY" >> terraform.tfvars
-            cat terraform.tfvars
+            echo "aws_access_key = \"$AWS_ACCESS_KEY\"" >> terraform.tfvars
+            echo "aws_secret_key = \"$AWS_SECRET_KEY\"" >> terraform.tfvars
         shell: bash
         env:
           AWS_ACCESS_KEY : ${{secrets.AWS_ACCESS_KEY}}
